# RAG

./: .gitignore  README.md  app.py  evaluation.ipynb  pyproject.toml  report.html  testset10.jsonl
.streamlit/: config.toml
chroma_db/: chroma.sqlite3
extras/: chat_title.py  debug.py  examples.ipynb  generate_embeddings.py
